Achievement_2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: increment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: increment-api
  template:
    metadata:
      labels:
        app: increment-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: node-04
      containers:
        - name: app
          image: bashkacoder/increment-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: db
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 10
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: increment-db-pvc
