Achievement_2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: increment-api
spec:
  type: ClusterIP
  selector:
    app: increment-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
